[package]
name = "ref-audio-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
reframework_api_rs = { git = "https://github.com/paean-of-guidance/reframework-api-rs.git", branch = "main" }
# to fix the lua 5.4.3 version
mlua = { git = "https://github.com/eigeen/mlua-for-ref.git", features = [
    "lua54",
    "vendored",
    "send",
    "serialize",
] }

log = "0.4"
kira = "0.10"
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
parking_lot = "0.12"
thiserror = "2.0"

[profile.release]
# lto = true

[profile.dev.package.kira]
opt-level = 3

[profile.dev.package.cpal]
opt-level = 3

[profile.dev.package.symphonia]
opt-level = 3

[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3

[profile.dev.package.symphonia-format-ogg]
opt-level = 3

[profile.dev.package.symphonia-codec-vorbis]
opt-level = 3

[profile.dev.package.symphonia-bundle-flac]
opt-level = 3

[profile.dev.package.symphonia-format-wav]
opt-level = 3

[profile.dev.package.symphonia-codec-pcm]
opt-level = 3
